<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FiftyMeters</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="am_text_welcome">Welcome</string>
    <string name="am_text_username">Username :</string>
    <string name="am_text_password">Password :</string>
    <string name="am_button_login">Login</string>
    <string name="am_text_forget">Forgot your password ?</string>
    <string name="am_text_register">Sign Up</string>
    <string name="title_activity_recovery">RecoveryActivity</string>
    <string name="ra_text_username">Username :</string>
    <string name="ra_text_email">Email :</string>
    <string name="ra_text_submit">Submit</string>
    <string name="as_text_username">Username :</string>
    <string name="as_text_email">Email :</string>
    <string name="as_text_password">Password :</string>
    <string name="as_button_submit">Submit</string>
    <string name="title_activity_sign_up">SignUpActivity</string>




</resources>
